--- a/.gitignore
+++ b/.gitignore
@@ -965,10 +965,10 @@ coverage*[.json, .xml, .info]
 /docs/coveragereport
 /docs/coverxygen
 /site
-/calculator/cobertura.xml
+/forestry/cobertura.xml
 /cobertura.xml
 *.orig
 *.cov
 *.csv
 /build_win
-/calculatorapp_unit_win_cobertura.xml
+/forestryapp_unit_win_cobertura.xml
