--- a/build_win/src/tests/googletest-build/googlemock/gmock.vcxproj.filters
+++ b/build_win/src/tests/googletest-build/googlemock/gmock.vcxproj.filters
@@ -1,19 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="C:\Users\samet\OneDrive\Masaüstü\algo-1\ce103-midterm-samet-anaz-mustafa-guneyli\src\tests\googletest\googletest\src\gtest-all.cc">
+    <ClCompile Include="C:\Users\musta\OneDrive\Desktop\algo1\ce103-midterm-samet-anaz-mustafa-guneyli\src\tests\googletest\googletest\src\gtest-all.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\samet\OneDrive\Masaüstü\algo-1\ce103-midterm-samet-anaz-mustafa-guneyli\src\tests\googletest\googlemock\src\gmock-all.cc">
+    <ClCompile Include="C:\Users\musta\OneDrive\Desktop\algo1\ce103-midterm-samet-anaz-mustafa-guneyli\src\tests\googletest\googlemock\src\gmock-all.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="C:\Users\samet\OneDrive\Masaüstü\algo-1\ce103-midterm-samet-anaz-mustafa-guneyli\src\tests\googletest\googlemock\CMakeLists.txt" />
+    <CustomBuild Include="C:\Users\musta\OneDrive\Desktop\algo1\ce103-midterm-samet-anaz-mustafa-guneyli\src\tests\googletest\googlemock\CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
-      <UniqueIdentifier>{9C55C02B-6C85-3071-AAFE-386D101BDA0D}</UniqueIdentifier>
+      <UniqueIdentifier>{4692F6DE-D332-34A4-B171-B531E579DA89}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
