--- a/build_win/src/tests/utility/utility_tests.vcxproj.filters
+++ b/build_win/src/tests/utility/utility_tests.vcxproj.filters
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="C:\Users\samet\OneDrive\Masaüstü\algo-1\ce103-midterm-samet-anaz-mustafa-guneyli\src\tests\utility\utility_test.cpp">
+    <ClCompile Include="C:\Users\musta\OneDrive\Desktop\algo1\ce103-midterm-samet-anaz-mustafa-guneyli\src\tests\utility\utility_test.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="C:\Users\samet\OneDrive\Masaüstü\algo-1\ce103-midterm-samet-anaz-mustafa-guneyli\src\tests\utility\CMakeLists.txt" />
+    <CustomBuild Include="C:\Users\musta\OneDrive\Desktop\algo1\ce103-midterm-samet-anaz-mustafa-guneyli\src\tests\utility\CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
-      <UniqueIdentifier>{884ED299-2143-3535-BAC0-78EF190A610F}</UniqueIdentifier>
+      <UniqueIdentifier>{B7AD4829-E320-3B7D-81FD-89EFF93ACA58}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
